Code Cleanup and fixes